# musli

./: .gitignore  CMakeLists.txt  README.md  vg_out
src/: .kdev_include_paths  CMakeLists.txt  Makefile  args.c  args.h  bitwise.c  bitwise.h  board.c  board.h  bot_least.c  bot_least.h  bot_most.c  bot_most.c~  bot_most.h  bot_most.h~  bot_moves.c  bot_moves.h  bot_random.c  bot_random.h  bot_stable.c  bot_stable.h  bot_stats.c  bot_stats.h  clickable_image.c  clickable_image.h  const.h  debug.c  game.c  game.h  game_config.c  game_config.h  hash_table.c  hash_table.h  human.c  human.h  macros.h  main_window.c  main_window.h  mtdf_helper.c  mtdf_helper.h  (+13 more)
